// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "backgroundColor": undefined,
            "borderRadius": 50,
          },
        ],
        undefined,
      ]
    }
  />
</View>
`;

exports[` 2`] = `
<View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        [
          {
            "height": 30,
            "width": 30,
          },
          {
            "backgroundColor": undefined,
            "borderRadius": 50,
          },
        ],
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          undefined,
          {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[` 3`] = `
<View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        [
          {
            "height": 30,
            "width": 30,
          },
          {
            "backgroundColor": undefined,
            "borderRadius": 50,
          },
        ],
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": undefined,
            "fontSize": 10,
          },
          undefined,
        ]
      }
    >
      Test label
    </Text>
  </View>
</View>
`;

exports[`Badge renders badge with borderStyle renders badge with circular borderStyle 1`] = `
<View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        [
          {
            "height": 10,
            "width": 10,
          },
          {
            "backgroundColor": undefined,
            "borderRadius": 50,
          },
        ],
        undefined,
      ]
    }
  />
</View>
`;

exports[`Badge renders badge with borderStyle renders badge with rectangular borderStyle 1`] = `
<View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        [
          {
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": undefined,
            "borderRadius": 3,
          },
        ],
        undefined,
      ]
    }
  />
</View>
`;

exports[`Badge renders badge with borderStyle renders badge with rectangular borderStyle, small size 1`] = `
<View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        [
          {
            "paddingHorizontal": 6,
            "paddingVertical": 3,
          },
          {
            "backgroundColor": undefined,
            "borderRadius": 3,
          },
        ],
        undefined,
      ]
    }
  />
</View>
`;

exports[`Badge renders badge with different sizes renders badge with medium size 1`] = `
<View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "backgroundColor": undefined,
            "borderRadius": 50,
          },
        ],
        undefined,
      ]
    }
  />
</View>
`;

exports[`Badge renders badge with different sizes renders badge with small size 1`] = `
<View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        [
          {
            "height": 10,
            "width": 10,
          },
          {
            "backgroundColor": undefined,
            "borderRadius": 50,
          },
        ],
        undefined,
      ]
    }
  />
</View>
`;
